Fix footer spacing and add noshadow class

--- a/web/themes/custom/sand/css/organisms.css
+++ b/web/themes/custom/sand/css/organisms.css
@@ -2025,7 +2025,8 @@ textarea {
     .footer .region--footer ul {
       list-style: none;
       margin: 0;
-      padding: 0; }
+      padding: 0;
+      margin: 0 !important; }
     .footer .region--footer__inner {
       background-color: #37424a;
       color: #fff;
@@ -2945,6 +2946,10 @@ textarea {
 
 .node--type-outreach .section-outreach .grid-container {
   padding: 0; }
+
+.node--type-outreach p.noshadow,
+.node--type-outreach .stellar-window p.noshadow {
+  text-shadow: none; }
 
 .node-type-slide .slide-title h1 {
   font-size: 2rem;
